[gd_scene load_steps=42 format=2]

[ext_resource path="res://potions/basic/Explosion.png" type="Texture" id=1]
[ext_resource path="res://potions/portal.png" type="Texture" id=2]
[ext_resource path="res://potions/basic/basic.png" type="Texture" id=3]
[ext_resource path="res://potions/basic/basic.gd" type="Script" id=4]

[sub_resource type="CapsuleShape2D" id=18]
radius = 8.0
height = 2.0

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 64, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 192, 64, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 64, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 192, 128, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 64, 64 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": false,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=19]
radius = 28.0

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 360, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 432, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 504, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 576, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 648, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 2 )
region = Rect2( 72, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 2 )
region = Rect2( 144, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 2 )
region = Rect2( 216, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 2 )
region = Rect2( 432, 0, 72, 72 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 2 )
region = Rect2( 504, 0, 72, 72 )

[sub_resource type="SpriteFrames" id=49]
animations = [ {
"frames": [ SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=40]
resource_name = "fade"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Portal:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="BasicPotion" type="RigidBody2D"]
collision_layer = 16
collision_mask = 112
mode = 2
gravity_scale = 0.0
contacts_reported = 5
contact_monitor = true
linear_damp = 2.0
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 7 )
shape = SubResource( 18 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 17 )
speed_scale = 2.0

[node name="ExplodeTimer" type="Timer" parent="."]
autostart = true

[node name="ExplosionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2( 0, 8 )
shape = SubResource( 19 )

[node name="Explode" type="AnimatedSprite" parent="ExplosionArea"]
visible = false
position = Vector2( 0, 7 )
frames = SubResource( 30 )
speed_scale = 3.0

[node name="Portal" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 0, 6 )
scale = Vector2( 0.6, 0.6 )
frames = SubResource( 49 )
frame = 1
speed_scale = 5.0
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade = SubResource( 40 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="ExplodeTimer" to="." method="_on_ExplodeTimer_timeout"]
[connection signal="area_shape_entered" from="ExplosionArea" to="." method="_on_ExplosionArea_area_shape_entered"]
[connection signal="area_shape_exited" from="ExplosionArea" to="." method="_on_ExplosionArea_area_shape_exited"]
[connection signal="body_entered" from="ExplosionArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="ExplosionArea" to="." method="_on_Area2D_body_exited"]
[connection signal="animation_finished" from="ExplosionArea/Explode" to="." method="_on_Explode_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
